some minor changes to my projects section

--- a/index.html
+++ b/index.html
@@ -348,10 +348,10 @@
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2 text-center">
                     <div class="section-title">
-                        <h1>My <span class="colored-text">Achievements</span> </h1> 
+                        <h1>My <span class="colored-text">Projects</span> </h1> 
                         <span class="border-line"></span>
                         <p class="lead subtitle-caption">
-                            Some of my achievements include the following:
+                            Some of my projects are mentioned below:
                         </p>
                     </div>
                 </div>
@@ -362,8 +362,8 @@
                 <div class="row">
                     <div class="col-sm-3 margin-bottom30 text-center">
                         <div class="fact-box">
-                            <h2>3 Million</h2>                          
-                            <h5>Happiness</h5>
+                            <h2>American Sign Language</h2>                          
+                            <h5>Recognition</h5>
                             <span class="border-line"></span>
                         </div>
                     </div><!--fact cols-->
