added more projects to my projects section

--- a/index.html
+++ b/index.html
@@ -360,32 +360,48 @@
         <div class="funfacts parallax-1">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-3 margin-bottom30 text-center">
+                    <div class="col-sm-4 margin-bottom30 text-center">
                         <div class="fact-box">
-                            <h2>American Sign Language</h2>                          
-                            <h5>Recognition</h5>
-                            <span class="border-line"></span>
+                            <a href="https://github.com/sushant-bhattarai/sign-language-recognition-major-project"><h4>American Sign Language Recognition</h4>                          
+<!--                             <h5></h5> -->
+<!--                             <span class="border-line"></span> -->
                         </div>
                     </div><!--fact cols-->
-                    <div class="col-sm-3 margin-bottom30 text-center">
+                    <div class="col-sm-4 margin-bottom30 text-center">
                         <div class="fact-box">
-                            <h2>5</h2>                          
-                            <h5>Projects finished</h5>
-                            <span class="border-line"></span>
+				<a href="https://github.com/sushant-bhattarai/commoncollegeapplication"><h4>College Recommendation System</h4></a>                          
+<!--                             <h5>Projects finished</h5> -->
+<!--                             <span class="border-line"></span> -->
                         </div>
                     </div><!--fact cols-->
-                    <div class="col-sm-3 margin-bottom30 text-center">
+                    <div class="col-sm-4 margin-bottom30 text-center">
                         <div class="fact-box">
-                            <h2>5000</h2>                          
-                            <h5>Plates of Rice eaten</h5>
-                            <span class="border-line"></span>
+                            <a href="https://github.com/sushant-bhattarai/fashion_hub_ecommerce"><h4>Fashion E-commerce site</h4></a>                          
+<!--                             <h5></h5> -->
+<!--                             <span class="border-line"></span> -->
                         </div>
                     </div><!--fact cols-->
-                    <div class="col-sm-3 margin-bottom30 text-center">
+		</div>
+		<div class="row">
+                    <div class="col-sm-4 margin-bottom30 text-center">
                         <div class="fact-box">
-                            <h2>1000</h2>                          
-                            <h5>Cups of black coffee drunk</h5>
-                            <span class="border-line"></span>
+                            <a href="https://github.com/sushant-bhattarai/canteen-management"><h4>Canteen Management Web App</h4></a>                          
+<!--                             <h5>Cups of black coffee drunk</h5> -->
+<!--                             <span class="border-line"></span> -->
+                        </div>
+                    </div><!--fact cols-->
+		    <div class="col-sm-4 margin-bottom30 text-center">
+                        <div class="fact-box">
+                            <a href="https://sushant-bhattarai.github.io/lifetime_calculator/"><h4>Lifetime Calculator</h4></a>                          
+<!--                             <h5>Cups of black coffee drunk</h5> -->
+<!--                             <span class="border-line"></span> -->
+                        </div>
+                    </div><!--fact cols-->
+		    <div class="col-sm-4 margin-bottom30 text-center">
+                        <div class="fact-box">
+                            <a href=""><h4>More Coming Soon...</h4></a>                          
+<!--                             <h5>Cups of black coffee drunk</h5> -->
+<!--                             <span class="border-line"></span> -->
                         </div>
                     </div><!--fact cols-->
 
@@ -397,7 +413,7 @@
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 text-center">
                         <div class="section-title">
-                            <h1>My <span class="colored-text">Music</span></h1> 
+                            <h1><span class="colored-text">Music</span></h1> 
                             <span class="border-line"></span>
                             <p class="lead subtitle-caption">
                                 I am passionate about music and I do sing during my free time. I have owned a YouTube channel. You can play some of my songs on YT from below.
