--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <!-- SLIDE 2 -->
                     <li data-transition="fade" data-slotamount="7" data-masterspeed="1500">
                         <!-- MAIN IMAGE -->
-                        <img src="images/bg-8.jpg" alt="second image" style="max-width: 100%; max-height: 100%">
+                        <img src="images/bg-8.JPG" alt="second image" style="max-width: 100%; max-height: 100%">
 
                         <!-- LAYERS -->
                         <!-- LAYER NR. 1 -->
